# CarryOnLive

./: .gitignore  DEPLOYMENT.md  DEPLOY_GUIDE.md  api_structure_test.py  audit_backend_test.py  backend_checklist_enhanced_test.py  backend_checklist_test.py  backend_test.py  beneficiary_photo_edge_test.py  beneficiary_photo_test.py  codemagic.yaml  comprehensive_backend_test.py  design_guidelines.json  docker-compose.yml  final_audit_test.py  housekeeping.sh  railway.toml  render.yaml  test_result.md
backend/: .dockerignore  .env  Dockerfile  Procfile  config.py  guards.py  middleware.py  models.py  pyproject.toml  requirements.txt  schedulers.py  server.py  server_new.py  server_original_backup.py  server_refactored.py  utils.py
backend/routes/: admin.py  admin_digest.py  auth.py  beneficiaries.py  checklist.py  compliance.py  digest.py  digital_wallet.py  documents.py  dts.py  emergency_access.py  errors.py  estates.py  family_plan.py  guardian.py  messages.py  milestone_deliveries.py  notifications.py  onboarding.py  operators.py  ops_dashboard.py  pdf_export.py  photos.py  push.py  section_permissions.py  security.py  staff_tools.py  subscriptions.py  support.py  timeline.py  transition.py  trial_reminders.py  webauthn.py
backend/services/: audit.py  encryption.py  notifications.py  photo_storage.py  photo_urls.py  readiness.py  storage.py  token_blacklist.py  voice_biometrics.py
backend/tests/: conftest.py  test_admin_analytics_digest.py  test_admin_beneficiary.py  test_admin_tree_view.py  test_apple_webhook.py  test_appstore_compliance.py  test_dts_delete.py  (+82 more)
(+459 files in other folders)
